<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">Sobre</string>
    <string name="accept">Aceitar</string>
    <string name="action_settings">Configuracao</string>
    <string name="add">Novo</string>
    <string name="alphabet">A</string>
    <string name="ano">Filtrar por Ano</string>
    <string name="app_name">Giganima</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="baixar">Downloads</string>
    <string name="banner">ca-app-pub-3515235299568929/3776945096</string>
    <string name="baseurl">http://one.zetai.info/</string>
    <string name="beta">Todos</string>
    <string name="blocks_count">Blocos</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="browser">Simple Browser</string>
    <string name="change_download_dir">Pasta de Downloads</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checksum">Checksum</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_date">Criado em</string>
    <string name="decline">Negar</string>
    <string name="delete">Delete</string>
    <string name="desc">Sim</string>
    <string name="detector">Video detector</string>
    <string name="downloaded_size">Baixado</string>
    <string name="dummy_button">Sair</string>
    <string name="episodes">Episódios</string>
    <string name="favorito">Favoritos</string>
    <string name="finish">Baixar</string>
    <string name="generos">Categorias</string>
    <string name="interstitial">ca-app-pub-3515235299568929/7502661019</string>
    <string name="lancamentos">Nova Temporada</string>
    <string name="latest">Atualizados</string>
    <string name="lista_anime">Lista Completa</string>
    <string name="main_header">Giganima</string>
    <string name="mais">Extras</string>
    <string name="md5">MD5</string>
    <string name="msg_close">Fechar</string>
    <string name="msg_copied">Copiado para clipboard.</string>
    <string name="msg_enter_url">Digite uma URL</string>
    <string name="msg_error">Error</string>
    <string name="msg_exists">O vídeo já existe, renomeie para baixar outra cópia</string>
    <string name="msg_fetch_filename">Nome do Arquivo</string>
    <string name="msg_name">Nome</string>
    <string name="msg_no_video">Oops, nenhum video detectado</string>
    <string name="msg_running">Giganima Download está executando</string>
    <string name="msg_running_detail">Clique para detalhes</string>
    <string name="msg_server_unsupported">Não suportado, ou falha</string>
    <string name="msg_threads">Conexões</string>
    <string name="msg_url">Download URL</string>
    <string name="msg_url_malform">Url malformada ou falha na conexão</string>
    <string name="msg_wait">Por Favor Aguarde...</string>
    <string name="name">Nome</string>
    <string name="need_restart">É necessário reiniciar o giganima para que as alterações façam efeito.</string>
    <string name="nnf_create_folder_error">Failed to create folder</string>
    <string name="nnf_filename">Filename</string>
    <string name="nnf_name">Name</string>
    <string name="nnf_need_valid_filename">Please enter or select a valid filename</string>
    <string name="nnf_new_folder">New folder</string>
    <string name="nnf_permission_external_write_denied">Permisson to access filesystem denied</string>
    <string name="nnf_select_something_first">Please select something first</string>
    <string name="no_available_dir">Selecione um diretório disponível.</string>
    <string name="open_with_gigaget">Abrir com Giganima</string>
    <string name="outros">Outros</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path">Local</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pause">Pausar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="popular">Mais Assistidos</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="screen_rotation">rotação</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">Configurações</string>
    <string name="sha1">SHA1</string>
    <string name="speed">Velocidade</string>
    <string name="start">Iniciar</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Aceita autorizar accesso de gravação para download?</string>
    <string name="store_picture_message_negate">Não foi autorizado o acesso de gravação.</string>
    <string name="store_picture_title">Savar Vídeo</string>
    <string name="switch_mode">troca entre lista e tabela</string>
    <string name="threads_count">Conexões simultâneas</string>
    <string name="titulo_ordem">Alguma Coisa</string>
    <string name="total_size">Tamanho</string>
    <string name="txt_some_header">Ex: Fate</string>
    <string name="url">Url</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="view">Abrir</string>
</resources>
